--- a/post/front/分享页面/main.css
+++ b/post/front/分享页面/main.css
@@ -139,7 +139,7 @@ body {
     bottom: 0;
     left: 0;
     background-color: rgba(0,95,172,0.5);
-    border: 1px solid #979797;
+    border-top: 1px solid #979797;
     border-radius: 1px;
 }
 
