--- a/post/front/分享页面/main.css
+++ b/post/front/分享页面/main.css
@@ -10,7 +10,7 @@ body {
 
 .container {
     width: 90%;
-    margin: 1.5rem auto auto;
+    margin: 2rem auto auto;
     background-color: #fff;
     border: 1px solid rgba(151,151,151,1);
     border-radius: 0.5rem;
@@ -23,25 +23,18 @@ body {
 }
 
 .image-wrapper img {
-    height: 2.5rem;
+    height: 3rem;
     position: absolute;
-    top: -1.25rem;
-    margin-left: -1.25rem;
+    top: -1.5rem;
+    margin-left: -1.5rem;
     border-radius: 50%;
-}
-
-.username {
-    font-size: 0.6rem;
-    line-height: 1.33rem;
-    color: #333333;
-    margin-top: 1.5rem;
 }
 
 .desicion {
     font-size: 0.75rem;
     line-height: 1.05rem;
     color: #4D4D4D;
-    margin-top: 0.2rem;
+    margin-top: 1.7rem;
 }
 
 .already {
@@ -104,7 +97,7 @@ body {
 .info div {
     width: 50%;
     height: 3.75rem;
-    border-top: 1px solid #E2E2E2;
+    border-top: 1px solid #ECECEC;
     float:left;
 }
 
@@ -122,7 +115,7 @@ body {
 }
 
 .info div:nth-child(even) {
-    border-left: 1px solid #E2E2E2;
+    border-left: 1px solid #ECECEC;
     margin-left: -1px;
 }
 
